<resources>
    <string name="app_name">TP3</string>
    <string name="tab_text_1">Offres</string>
    <string name="tab_text_2">Vendre</string>
    <string name="tab_text_3">Mes Annonces</string>
    <string name="car">Voiture</string>
    <string name="date_format">\'Le\' dd/MM/yyyy \'à\' hh:mm</string>
    <string name="currency">$ CAD</string>
    <string name="kilometers">Kilomètre(s)</string>
    <string name="made_in">Produite en</string>
    <string name="uploaded_by">Mise en ligne par</string>
    <string name="myself">le propriétaire</string>
    <string name="anonymous">une personne tièrce</string>
    <string name="transmission">Transmission</string>
    <string name="student_email">maxime.leroy.4@ulaval.ca</string>
    <string name="student_identification_number">111244596</string>
    <string name="manual">manuelle</string>
    <string name="automatic">automatique</string>
    <string name="robotic">robotique</string>
    <string name="upload_success">Mise en ligne effectuée avec succès</string>
    <string name="email_app_missing">Please make sure that you have configured at least one email application on your phone</string>
    <string name="dear">Cher</string>
    <string name="contact">Contacter</string>
    <string name="send">Envoyer</string>
    <string name="price_in">Prix en</string>
    <string name="brand">Marque</string>
    <string name="model">Modèle</string>
    <string name="price">Prix</string>
    <string name="number_of">Nombre de</string>
    <string name="production_date">Date de production</string>
    <string name="type_of_transmission">Type de transmission</string>
    <string name="vehicle_owner">Êtes vous le propriétaire ?</string>
    <string name="yes">Oui</string>
    <string name="no">Non</string>
    <string name="connect">Se connecter</string>
    <string name="identification_number">Numéro d\'identification</string>
    <string name="email">Adresse email</string>
</resources>
