<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="60dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"
                android:textSize="18sp"
                android:text="@string/brand"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:padding="2dp"
                android:background="@color/colorLightGrey">
                <Spinner
                    android:id="@+id/brand_choice_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:popupBackground="@color/colorLightGrey" />
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:text="@string/model"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:padding="2dp"
                android:background="@color/colorLightGrey">
                <Spinner
                    android:id="@+id/model_choice_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:popupBackground="@color/colorLightGrey" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/price_in"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorBlack" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:paddingStart="6dp"
                    android:paddingLeft="6dp"
                    android:text="@string/currency"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorBlack" />
            </LinearLayout>

            <EditText
                android:id="@+id/price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="420"
                android:inputType="number"
                android:layout_gravity="start"
                android:textColor="@color/colorBlack" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/number_of"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorBlack" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="6dp"
                    android:paddingLeft="6dp"
                    android:text="@string/kilometers"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorBlack" />
            </LinearLayout>

            <EditText
                android:id="@+id/kilometers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="1337"
                android:inputType="number"
                android:textColor="@color/colorBlack" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/production_date"
                android:layout_marginTop="10dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/colorBlack" />

            <EditText
                android:id="@+id/year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="1997"
                android:editable="false"
                android:inputType="none"
                android:textColor="@color/colorBlack" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/type_of_transmission"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/colorBlack" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:padding="2dp"
                android:background="@color/colorLightGrey">
                <Spinner
                    android:id="@+id/transmission_choice_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:popupBackground="@color/colorLightGrey" />
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/vehicle_owner"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/colorBlack" />

            <RadioGroup
                android:id="@+id/owner"
                android:layout_marginTop="4dp"
                android:paddingBottom="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/yes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/yes"
                    android:checked="true" />
                <RadioButton
                    android:id="@+id/no"
                    android:text="@string/no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </RadioGroup>
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:gravity="bottom">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:contentDescription="@string/car"
                android:paddingTop="6dp"
                android:src="@drawable/upload_icon" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:gravity="center"
                android:text="@string/send"
                android:textColor="@color/colorWhite"
                android:textSize="12sp"
                android:textStyle="bold" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>
