<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_marginTop="6dp"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginBottom="2dp"
        android:background="@color/colorWhite">

        <ImageView
            android:id="@+id/image"
            android:src="@drawable/ic_launcher_background"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:contentDescription="@string/car" />

        <View
            android:layout_width="2dp"
            android:layout_height="fill_parent"
            android:layout_marginRight="6dp"
            android:layout_marginEnd="6dp"
            android:background="@color/colorPrimaryDark" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/brand_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="BMW"
                    android:textStyle="bold"
                    android:textAppearance="?attr/textAppearanceListItem" />

                <TextView
                    android:id="@+id/model_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:paddingLeft="10dp"
                    android:text="M3"
                    android:textStyle="bold"
                    android:textAppearance="?attr/textAppearanceListItem" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="100"
                    android:textAppearance="?attr/textAppearanceListItem" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/currency"
                    android:paddingStart="8dp"
                    android:paddingLeft="8dp"
                    android:textAppearance="?attr/textAppearanceListItem" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/kilometers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="120987"
                    android:textAppearance="?attr/textAppearanceListItem" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/kilometers"
                    android:paddingStart="8dp"
                    android:paddingLeft="8dp"
                    android:textAppearance="?attr/textAppearanceListItem" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/made_in"
                    android:textAppearance="?attr/textAppearanceListItem" />

                <TextView
                    android:id="@+id/year"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="1997"
                    android:paddingStart="6dp"
                    android:paddingLeft="6dp"
                    android:textAppearance="?attr/textAppearanceListItem" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/uploaded_by" />

                <TextView
                    android:id="@+id/owner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="moi meme"
                    android:paddingStart="6dp"
                    android:paddingLeft="6dp" />
            </LinearLayout>

            <TextView
                android:id="@+id/created"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Aujourd'hui à 19:38" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>
