<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="60dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="start"
                android:background="@color/colorGrey"
                android:contentDescription="@string/car"
                android:src="@drawable/ic_launcher_background" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimaryDark" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:textColor="@color/colorBlack">

                    <TextView
                        android:id="@+id/brand_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="BMW"
                        android:textSize="18sp"
                        android:textColor="@color/colorBlack"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/model_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="10dp"
                        android:paddingLeft="10dp"
                        android:text="M3"
                        android:textSize="18sp"
                        android:textColor="@color/colorBlack"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="100"
                        android:textColor="@color/colorBlack" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="8dp"
                        android:paddingLeft="8dp"
                        android:text="@string/currency"
                        android:textColor="@color/colorBlack" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/kilometers"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="120987"
                        android:textColor="@color/colorBlack" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="8dp"
                        android:paddingLeft="8dp"
                        android:text="@string/kilometers"
                        android:textColor="@color/colorBlack" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/made_in"
                        android:textColor="@color/colorBlack" />

                    <TextView
                        android:id="@+id/year"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="6dp"
                        android:paddingLeft="6dp"
                        android:text="1997"
                        android:textColor="@color/colorBlack" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/transmission"
                        android:textColor="@color/colorBlack" />

                    <TextView
                        android:id="@+id/transmission"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="6dp"
                        android:paddingLeft="6dp"
                        android:text="MA"
                        android:textColor="@color/colorBlack" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/uploaded_by" />

                    <TextView
                        android:id="@+id/owner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="6dp"
                        android:paddingLeft="6dp"
                        android:text="@string/myself" />
                </LinearLayout>

                <TextView
                    android:id="@+id/created"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Aujourd'hui à 19:38" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimaryDark" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:paddingBottom="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="DESCRIPTION"
                    android:textColor="@color/colorBlack"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textColor="@color/colorBlack"
                    android:text="Lorem" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:gravity="bottom">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:contentDescription="@string/car"
                android:paddingTop="6dp"
                android:src="@drawable/email_icon" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:gravity="center"
                android:text="Contacter"
                android:textColor="@color/colorWhite"
                android:textSize="12sp"
                android:textStyle="bold" />
        </LinearLayout>
    </RelativeLayout>


</RelativeLayout>
